# mosaic

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONVENTIONS.md  GEMINI.md  README.md  vcpkg-configuration.json  vcpkg.json
codex/lib/: CMakeLists.txt
codex/lib/include/codex/: files_collector.hpp  nodes.hpp  parser.hpp  source.hpp  source_extractor.hpp
codex/lib/src/: files_collector.cpp  parser.cpp  source_extractor.cpp  tree_sitter_cpp.hpp
codex/lib/src/parser/: parser.cpp
codex/lib/tests/: main.cpp
mosaic/: CMakeLists.txt
mosaic/bench/: CMakeLists.txt  ecs_bench.cpp
mosaic/core/: CLAUDE.md
mosaic/ecs/: CLAUDE.md
mosaic/exec/: CLAUDE.md
mosaic/graphics/: CLAUDE.md
mosaic/include/mosaic/: defines.hpp  entry_point.hpp  version.h  version.h.in  version.hpp
mosaic/include/mosaic/core/: application.hpp  cmd_line_parser.hpp  logger.hpp  logger_default_sink.hpp  platform.hpp  sys_console.hpp  sys_info.hpp  sys_ui.hpp  system.hpp  timer.hpp  tracer.hpp  window.hpp
mosaic/include/mosaic/ecs/: archetype.hpp  builtin_components.hpp  component.hpp  component_registry.hpp  component_utils.hpp  entity.hpp  entity_allocation_helper.hpp  entity_registry.hpp  entity_view.hpp  helpers.hpp  typeless_sparse_set.hpp  typeless_vector.hpp
mosaic/include/mosaic/exec/: move_only_task.hpp  task_future.hpp  thread_pool.hpp
mosaic/include/mosaic/graphics/: buffer.hpp  draw_call.hpp  pipeline.hpp  render_context.hpp  render_system.hpp  renderer.hpp  renderer_api.hpp  renderer_context.hpp  shader.hpp  texture.hpp  window.hpp
mosaic/include/mosaic/helpers/: memory_leak.hpp
mosaic/include/mosaic/input/: action.hpp  constants.hpp  events.hpp  glfw_mappings.hpp  input_arena.hpp  input_context.hpp  input_mappings.hpp  input_system.hpp  mappings.hpp  raw_input_handler.hpp  sources.def
mosaic/include/mosaic/internal/: defines.hpp
mosaic/include/mosaic/tools/: logger.hpp  logger_default_sink.hpp  tracer.hpp
mosaic/include/mosaic/utils/: enum.hpp  sized_queue.hpp  unicode.hpp
mosaic/include/mosaic/window/: callbacks.def  window.hpp  window_system.hpp
mosaic/input/: CLAUDE.md
mosaic/platform/: CLAUDE.md
mosaic/scene/: CLAUDE.md
mosaic/src/: game_activity.cpp
mosaic/src/core/: application.cpp  cmd_line_parser.cpp  logger.cpp  logger_default_sink.cpp  platform.cpp  sys_console.cpp  sys_info.cpp  sys_ui.cpp  timer.cpp  tracer.cpp  window.cpp
mosaic/src/exec/: thread_pool.cpp
mosaic/src/graphics/: render_context.cpp  render_system.cpp  renderer.cpp  window.cpp
mosaic/src/graphics/Vulkan/: vulkan_allocator.cpp  vulkan_allocator.hpp  vulkan_common.hpp  vulkan_framebuffers.cpp  vulkan_framebuffers.hpp  vulkan_render_context.cpp  vulkan_render_context.hpp  vulkan_render_system.cpp  vulkan_render_system.hpp  vulkan_renderer_api.cpp  vulkan_renderer_api.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
mosaic/src/graphics/WebGPU/: shared.hpp  web_gpu_commands.cpp  web_gpu_commands.hpp  web_gpu_device.cpp  web_gpu_device.hpp  web_gpu_instance.cpp  web_gpu_instance.hpp  web_gpu_renderer_api.cpp  web_gpu_renderer_api.hpp  web_gpu_swapchain.cpp  web_gpu_swapchain.hpp  webgpu_commands.cpp  webgpu_commands.hpp  webgpu_common.hpp  webgpu_device.cpp  webgpu_device.hpp  webgpu_instance.cpp  webgpu_instance.hpp  webgpu_pipeline.hpp  webgpu_render_context.cpp  webgpu_render_context.hpp  webgpu_render_system.cpp  webgpu_render_system.hpp  webgpu_renderer_api.cpp  webgpu_renderer_api.hpp  webgpu_swapchain.cpp  webgpu_swapchain.hpp
mosaic/src/input/: input_arena.cpp  input_context.cpp  input_system.cpp  raw_input_handler.cpp
mosaic/src/input/sources/: keyboard_input_source.cpp  mouse_input_source.cpp  text_input_source.cpp  unified_text_input_source.cpp
mosaic/src/platform/AGDK/: agdk_platform.cpp  agdk_platform.hpp  agdk_raw_input_handler.cpp  agdk_raw_input_handler.hpp  agdk_sys_console.cpp  agdk_sys_console.hpp  agdk_sys_info.cpp  agdk_sys_info.hpp  agdk_sys_ui.cpp  agdk_sys_ui.hpp  agdk_text_input_source.cpp  agdk_text_input_source.hpp  agdk_window.cpp  agdk_window.hpp  agdk_window_system.cpp  agdk_window_system.hpp  jni_helper.cpp
mosaic/src/platform/Emscripten/: emscripten_platform.cpp  emscripten_platform.hpp  emscripten_sys_console.cpp  emscripten_sys_console.hpp  emscripten_sys_info.cpp  emscripten_sys_info.hpp  emscripten_sys_ui.cpp  emscripten_sys_ui.hpp
mosaic/src/platform/GLFW/: glfw_keyboard_input_source.cpp  glfw_keyboard_input_source.hpp  glfw_mouse_input_source.cpp  glfw_mouse_input_source.hpp  glfw_raw_input_handler.cpp  glfw_raw_input_handler.hpp  glfw_text_input_source.cpp  glfw_text_input_source.hpp  glfw_window.cpp  glfw_window.hpp  glfw_window_system.cpp  glfw_window_system.hpp
mosaic/src/platform/POSIX/: posix_platform.cpp  posix_platform.hpp  posix_sys_console.cpp  posix_sys_console.hpp  posix_sys_info.cpp  posix_sys_info.hpp  posix_sys_ui.cpp  posix_sys_ui.hpp
mosaic/src/platform/Win32/: win32_platform.cpp  win32_platform.hpp  (+8 more)
mosaic/src/scene/: builtin_components.hpp
mosaic/src/tools/: logger.cpp  tracer.cpp
mosaic/src/window/: window.cpp  window_system.cpp
mosaic/tests/: CMakeLists.txt  main.cpp
mosaic/tests/src/: test_mosaic.cpp  test_tsafe_map.hpp  test_tsafe_queue.hpp
mosaic/tests/unit/: ecs_test.cpp  thread_pool_test.cpp  typeless_sparse_set_test.cpp  typeless_vector_test.cpp
mosaic/window/: CLAUDE.md
pieces/bench/: CMakeLists.txt  sparse_vs_map_bench.cpp
pieces/tests/: CMakeLists.txt
pieces/tests/src/: test_coroutines.hpp  test_pieces.cpp  test_result.hpp  test_tsafe_map.hpp  test_tsafe_queue.hpp  test_work_stealing_queue.hpp
pieces/tests/unit/: allocators_test.cpp  bitset_test.cpp  coroutines_test.cpp  double_ended_queue_test.cpp  result_test.cpp  sparse_set_test.cpp  spmc_snapshot_buffer_test.cpp  tsafe_deque_test.cpp  tsafe_map_test.cpp  tsafe_queue_test.cpp  work_stealing_queue_test.cpp
testbed/: CMakeLists.txt
testbed/src/: main.cpp  testbed.cpp  testbed.hpp
tests/integration/: CMakeLists.txt  test_integration.cpp
(+157 files in other folders)
